--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,19 @@ body {
   min-height: 100vh;
 }
 
+body::before {
+  content: '';
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-image: url('./assets/bgCaveiras.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.1;
+  z-index: -1;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
