--- a/src/Components/ButtonNavigation/styles.module.css
+++ b/src/Components/ButtonNavigation/styles.module.css
@@ -1,8 +1,7 @@
 .Root {
 	display: flex;
 	background-color: rgb(24, 24, 24);
-	border: 4px double #ffffff;
-	padding: 3px;
+	border: 2px solid #ffffff;
 	border-radius: 6px;
 	display: flex;
 	flex-direction: row;
@@ -11,32 +10,60 @@
 
 .Trigger {
 	all: unset;
-	border-right: 1px solid #000000;
+	border-radius: 0px;
+	border-right: 2px solid #ffffff;
 	padding: 8px 12px;
 	font-weight: 500;
 	color: rgb(255, 255, 255);
 	font-size: 20px;
 	gap: 2px;
 	width: 100%;
+	cursor: pointer;
+	position: relative;
+	z-index: 1;
+	background-color: rgb(24, 24, 24);
+	overflow: hidden;
+	transition: color 0.3s ease;
 }
 
-.Trigger:last-child {
-	border-right: none;
+.Trigger::before {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	transform: translateY(100%);
+	transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+	z-index: -1;
 }
 
-.SideRock:hover {
-	background-color: rgb(255, 0, 0, 0.200);
-	color: rgb(255, 255, 255);
+.SideRock{
+	border-radius: 0 6px 6px 0;
 }
-.Acoustic:hover {
-	background-color: rgb(255, 251, 0, 0.200);
-	color: rgb(255, 255, 255);
+
+.Home{
+	border-radius: 6px 0 0 6px;
 }
-.Ozzborns:hover {
-	background-color: rgba(255, 0, 234, 0.200);
-	color: rgb(255, 255, 255);
+
+.SideRock::before {
+	background: linear-gradient(0deg, rgba(167, 0, 0, 0.8), transparent);
 }
-.Home:hover {
-	background-color: rgb(255, 255, 255, 0.200);
-	color: rgb(0, 0, 0);
+
+.Acoustic::before {
+	background: linear-gradient(0deg, rgba(175, 172, 0, 0.8), transparent);
 }
+
+.Ozzborns::before {
+	background: linear-gradient(0deg, rgba(145, 0, 133, 0.8), transparent);
+}
+
+.Home::before {
+	background: linear-gradient(0deg, rgba(182, 182, 182, 0.8), transparent);
+}
+
+.Trigger:hover::before {
+	transform: translateY(0);
+}
+
+
