--- a/src/Components/ButtonNavigation/styles.module.css
+++ b/src/Components/ButtonNavigation/styles.module.css
@@ -32,8 +32,8 @@
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 60%;
-	transform: translateY(100%);
+	height: 80%;
+	transform: translateY(70%);
 	transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
 	z-index: -1;
 }
@@ -47,19 +47,19 @@
 }
 
 .SideRock::before {
-	background: linear-gradient(0deg, rgba(167, 0, 0, 0.8), transparent);
+	background: linear-gradient(0deg, #7E0000c2, transparent);
 }
 
 .Acoustic::before {
-	background: linear-gradient(0deg, rgba(175, 172, 0, 0.8), transparent);
+	background: linear-gradient(0deg, #7b2f00c2, transparent);
 }
 
 .Ozzborns::before {
-	background: linear-gradient(0deg, rgba(145, 0, 133, 0.8), transparent);
+	background: linear-gradient(0deg, #4A035Cc2, transparent);
 }
 
 .Home::before {
-	background: linear-gradient(0deg, rgba(182, 182, 182, 0.8), transparent);
+	background: linear-gradient(0deg, rgba(182, 182, 182, 0.3), transparent);
 }
 
 .Trigger:hover::before {
