--- a/src/Components/ButtonNavigation/styles.module.css
+++ b/src/Components/ButtonNavigation/styles.module.css
@@ -1,7 +1,7 @@
 .Root {
 	display: flex;
 	background-color: rgb(24, 24, 24);
-	border: 2px solid #ffffff;
+	border-bottom: 2px solid #ffffff;
 	border-radius: 6px;
 	display: flex;
 	flex-direction: row;
@@ -11,7 +11,7 @@
 .Trigger {
 	all: unset;
 	border-radius: 0px;
-	border-right: 2px solid #ffffff;
+	border-right: 1px solid #ffffff;
 	padding: 8px 12px;
 	font-weight: 500;
 	color: rgb(255, 255, 255);
@@ -40,6 +40,7 @@
 
 .SideRock{
 	border-radius: 0 6px 6px 0;
+	border: none;
 }
 
 .Home{
